# NitroGen

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
nitrogen/: game_env.py  inference_session.py
scripts/: play.py
